# RAS

./: .gitignore
trunk/: Makefile.in  configure  configure.ac
trunk/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
trunk/include/RC/: ALAgent.h  ConfigManager.h  ContainResourceTask.h  FWIManager.h  FWInstance.h  FWMAgent.h  InfoFromFWMToRC.h  InfoFromNCToRC.h  InfoSendToNC.h  NCAgent.h  NCLoadBalance.h  NCRegTask.h  Resource.h  ResourceManager.h  SASAgent.h  StartFWRootTask.h  StrategyManager.h  Task.h  head.h
trunk/include/protocol/: AlProtocol.pb.h  FwmRcProtocol.pb.h  RcNcProtocol.pb.h  RcSasProtocol.pb.h  TaskType.h
trunk/lib/: libcommon.la
trunk/scripts/: RASRC_build.sh
trunk/src/: Makefile.am  Makefile.in
trunk/src/AL/: ConfigManager.cpp  Makefile.am  Makefile.in  ServerAgent.cpp  config.xml  main.cpp
trunk/src/RC/: ALAgent.cpp  ConfigManager.cpp  FWIManager.cpp  FWInstance.cpp  FWMAgent.cpp  FWMHeartBeatTimer.cpp  GetNCFromAll.cpp  GetNCFromOne.cpp  InfoFromFWMToRC.cpp  InfoFromNCToRC.cpp  InfoSendToFWM.cpp  InfoSendToNC.cpp  Makefile.am  Makefile.in  NCAgent.cpp  NCHeartBeatTask.cpp  NCHeartBeatTimer.cpp  NCLoadBalance.cpp  NCRegTask.cpp  RASRC_config.xml  ResourceManager.cpp  ResourceScheduler.cpp  RunControl.cpp  SASAgent.cpp  StartFWRootTask.cpp  StrategyManager.cpp  main.cpp  tags
trunk/src/common/: Makefile.in
trunk/src/common/Timer/: Makefile.in
trunk/src/common/comm/: Makefile.in
trunk/src/common/daemon/: Makefile.in
trunk/src/common/log/: Makefile.in
trunk/src/common/sys/: Makefile.in
trunk/src/common/util/: Makefile.in
trunk/src/protocol/: AlProtocol.pb.cc  AlProtocol.proto  FwmRcProtocol.pb.cc  FwmRcProtocol.proto  Makefile.in  RcNcProtocol.pb.cc  RcSasProtocol.pb.cc  RcSasProtocol.proto
trunk/src/testclient/: Makefile.in
trunk/src/testserver/: Makefile.in
trunk/test/: Makefile.in
(+1 files in other folders)
